# ai-in-healthcare-utaustin-assignment7

./: .gitignore  README.md  data_preprocessor.py  main.py  pyproject.toml  reflection.py  result_analysis.ipynb  specialists.py
dataset/preprocessed/sigir/: ground_truths.json  patients.json  trials.json
lib/: args.py  data_loader.py  eval.py  exc_only_prompts.py  inc_only_prompts.py  prompts.py
results/: cot__ollama__temp05__0.jsonl  cot__ollama__temp05__1.jsonl  cot__ollama__temp05__2.jsonl  cot__ollama__temp05__self_consistency.jsonl  cot__openai.jsonl  cot__openai__temp05__0.jsonl  cot__openai__temp05__1.jsonl  cot__openai__temp05__2.jsonl  cot__openai__temp05__self_consistency.jsonl  reflection__ollama.jsonl  reflection__openai.jsonl  specialists__ollama.jsonl  specialists__openai.jsonl  zero_shot__ollama.jsonl  zero_shot__openai.jsonl
